; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_main.c_brcms_b_read_tsf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_main.c_brcms_b_read_tsf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_hardware = type { %struct.bcma_device* }
%struct.bcma_device = type { i32 }

@tsf_timerlow = common dso_local global i32 0, align 4
@tsf_timerhigh = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.brcms_hardware*, i32*, i32*)* @brcms_b_read_tsf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @brcms_b_read_tsf(%struct.brcms_hardware* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.brcms_hardware*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.bcma_device*, align 8
  store %struct.brcms_hardware* %0, %struct.brcms_hardware** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.brcms_hardware*, %struct.brcms_hardware** %4, align 8
  %9 = getelementptr inbounds %struct.brcms_hardware, %struct.brcms_hardware* %8, i32 0, i32 0
  %10 = load %struct.bcma_device*, %struct.bcma_device** %9, align 8
  store %struct.bcma_device* %10, %struct.bcma_device** %7, align 8
  %11 = load %struct.bcma_device*, %struct.bcma_device** %7, align 8
  %12 = load i32, i32* @tsf_timerlow, align 4
  %13 = call i32 @D11REGOFFS(i32 %12)
  %14 = call i32 @bcma_read32(%struct.bcma_device* %11, i32 %13)
  %15 = load i32*, i32** %5, align 8
  store i32 %14, i32* %15, align 4
  %16 = load %struct.bcma_device*, %struct.bcma_device** %7, align 8
  %17 = load i32, i32* @tsf_timerhigh, align 4
  %18 = call i32 @D11REGOFFS(i32 %17)
  %19 = call i32 @bcma_read32(%struct.bcma_device* %16, i32 %18)
  %20 = load i32*, i32** %6, align 8
  store i32 %19, i32* %20, align 4
  ret void
}

declare dso_local i32 @bcma_read32(%struct.bcma_device*, i32) #1

declare dso_local i32 @D11REGOFFS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
